syntax = "proto3";

package math;
option go_package = "test/grpc/math";

import "google/api/annotations.proto";

service Cat {
    rpc Sum (SumRequest) returns (SumResponse){
        option (google.api.http) = {
            post: "/api/v1/math/sum"
            body: "*"
        };
    }
    rpc Version (VersionRequest) returns (VersionResponse){
        option (google.api.http) = {
            get: "/api/v1/math/version"
        };
    }
}

message SumRequest{
    repeated int32 vals = 1;
}
message SumResponse{
    int32 val = 1;
}
message VersionRequest{
}
message VersionResponse{
    string val = 1;
}